Refactor game visibility preference handling
Moved logic for applying the 'hide-games' class based on local storage from the post page to the main layout. This centralizes the preference handling and ensures consistent behavior across page loads and navigation events. Also updated a post's note formatting.

--- a/src/content/posts/20251220 随机性与黑天鹅/index.mdx
+++ b/src/content/posts/20251220 随机性与黑天鹅/index.mdx
@@ -309,8 +309,8 @@ $$
 
 我们在已经累计了多次成就，有一定资产后，一定要对资产进行抗风险的配置，这是避免资产一夜归零的必要做法。而反脆弱的关键，是把资源配置在两个极端：一端极度保守，一端小比例极度激进。这样才能在黑天鹅事件中保证存活，并且用有限的损失获得黑天鹅潜在的无上限收益。
 
-::: note 本文不构成任何投资理财的建议，亏钱了别找我。
-
+:::warning
+本文不构成任何投资建议
 :::
 
 具体而言，可以采用如下资源配置方式：将约 **90% 的资源配置在安全区**，例如持有现金或国债。这一部分的核心目标不是追求收益，而是确保在任何“黑天鹅”事件发生时，你都不至于被系统性清零，从而保有持续参与的能力。剩余约 **10% 的资源**，则用于进行高风险、高不确定性的尝试，例如小规模的风险投资。这部分配置的意义在于：一旦出现“黑天鹅”，你可以用**有限的成本**换取**理论上接近无上限的潜在收益**——正如火鸡场中，真正长期、稳定获益的始终是农场主，而非火鸡本身。
