Add comment invitation to blog post
Appended a section inviting readers to leave comments and suggestions for further discussion and growth.

--- a/src/content/posts/20251220 随机性与黑天鹅/index.mdx
+++ b/src/content/posts/20251220 随机性与黑天鹅/index.mdx
@@ -374,6 +374,10 @@ $$
 - 黑天鹅
 - 反脆弱
 
+---
+
+欢迎留下你的评论与建议，一起交流与成长！
+
 ![封面-合并](./pic/%E5%B0%81%E9%9D%A2-%E5%90%88%E5%B9%B6.webp)
 
 ![MindMap](./pic/MindMap.webp)
