chore: remove file

--- a/src/content/posts/20251220 随机性与黑天鹅/index.mdx
+++ b/src/content/posts/20251220 随机性与黑天鹅/index.mdx
@@ -67,7 +67,7 @@ import quanqiuhua from './pic/全球化.webp';
 
 后人的评价往往具有 **后验性** ：他们根据已发生的既定事实去回溯动机，却忽视了在扣动扳机的那一刻，所谓“英雄”和所谓“疯子”在本质上是同一个人。如果此时剥离结果的干扰，从 **未定历史** 的角度审视这个行为。我们会发现参与者的期望收益并非 100 万美元，而是：
 
-$$E = \frac{1}{6} \times \$1,000,000 + \frac{5}{6} \times (\text{生命代价})$$
+$$E = \frac{1}{6} \times \text{\$}1,000,000 + \frac{5}{6} \times (\text{生命代价})$$
 
 从概率分布来看，他获得的其实是 **16.67 万美元的纸面富贵** 与 **欠下死神的 5/6 条命**。很明显这不是一个诱人的赌局。
 
@@ -313,7 +313,9 @@ $$
 本文不构成任何投资建议
 :::
 
-具体而言，可以采用如下资源配置方式：将约 **90% 的资源配置在安全区**，例如持有现金或国债。这一部分的核心目标不是追求收益，而是确保在任何“黑天鹅”事件发生时，你都不至于被系统性清零，从而保有持续参与的能力。剩余约 **10% 的资源**，则用于进行高风险、高不确定性的尝试，例如小规模的风险投资。这部分配置的意义在于：一旦出现“黑天鹅”，你可以用**有限的成本**换取**理论上接近无上限的潜在收益**——正如火鸡场中，真正长期、稳定获益的始终是农场主，而非火鸡本身。
+具体而言，可以采用如下资源配置方式：将约 **90% 的资源配置在安全区**，例如持有现金或国债。这一部分的核心目标不是追求收益，而是确保在任何“黑天鹅”事件发生时，你都不至于被系统性清零，从而保有持续参与的能力。
+
+剩余约 **10% 的资源**，则用于进行高风险、高不确定性的尝试，例如小规模的风险投资。这部分配置的意义在于：一旦出现“黑天鹅”，你可以用**有限的成本**换取**理论上接近无上限的潜在收益**——正如火鸡场中，真正长期、稳定获益的始终是农场主，而非火鸡本身。
 
 下面这段内容摘自《随机漫步的傻瓜》，就能很好的体现用黑天鹅赚取收益的情况，10%的资源或许能让你获得很大的收益：
 
